fixed sidenav z-index issue

--- a/client/css/dashboard.css
+++ b/client/css/dashboard.css
@@ -13,6 +13,7 @@
 	min-height: 100%;
 	max-width: 170px;
 	padding-right: 12px;
+	z-index: 1;
 }
 .dashboard-wrapper {
 	height: 100%;
